docs/tests/nameres/expressions/valid/ChannelNested.src
// Valid

let int x = 1;

let chan<int> intChan = <-(x);
let chan<chan<int>> intChanChan = <- intChan;