docs/tests/nameres/expressions/invalid/ChannelVarDoesntExist.src
// Invalid

let chan<int> intChan = <-(x);